--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -43,11 +43,11 @@
   </div>
 </div>
 
-<!-- Firebase SDK -->
-<script src="https://www.gstatic.com/firebasejs/12.2.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/12.2.1/firebase-auth.js"></script>
+<!-- Firebase v12 Modular SDK -->
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-app.js";
+import { getAuth, signInWithEmailAndPassword, updatePassword } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-auth.js";
 
-<script>
 const firebaseConfig = {
   apiKey: "AIzaSyCchBXnuc11KzkpG720IPtWb7Y1MKO0OTU",
   authDomain: "chronopay-b4267.firebaseapp.com",
@@ -58,8 +58,8 @@ const firebaseConfig = {
   measurementId: "G-GPY64CKF0Z"
 };
 
-firebase.initializeApp(firebaseConfig);
-const auth = firebase.auth();
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
 
 const form = document.getElementById('changePasswordForm');
 
@@ -71,17 +71,17 @@ form.addEventListener('submit', async (e) => {
   const newPassword = document.getElementById('newPassword').value;
 
   try {
-    // Sign in first using email + current password
-    const userCredential = await auth.signInWithEmailAndPassword(email, currentPassword);
+    // Sign in user first
+    const userCredential = await signInWithEmailAndPassword(auth, email, currentPassword);
     const user = userCredential.user;
 
     // Update password
-    await user.updatePassword(newPassword);
+    await updatePassword(user, newPassword);
 
     alert("Password updated successfully!");
     form.reset();
 
-  } catch(error) {
+  } catch (error) {
     console.error(error);
     alert(error.message);
   }
