--- a/index.html
+++ b/index.html
@@ -1,74 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Homepage - Login</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<style>
-  /* ORIGINAL CSS KEPT INTACT */
-  * { box-sizing: border-box; }
-  body, html {
-    margin: 0; padding: 0; height: 100%;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #333; overflow-x: hidden;
-  }
-  body {
-    background: linear-gradient(135deg, #6b73ff 0%, #000dff 100%);
-    position: relative; min-height: 100vh;
-    display: flex; justify-content: center; align-items: flex-start;
-    padding-top: 40px;
-  }
-  body::before, body::after {
-    content: '';
-    position: fixed;
-    border-radius: 50%;
-    opacity: 0.15;
-    filter: blur(100px);
-    z-index: 0;
-  }
-  body::before { width: 300px; height: 300px; background: #ff6b6b; top: 20%; left: 10%; }
-  body::after { width: 400px; height: 400px; background: #ffd93b; bottom: 10%; right: 15%; }
+  <!-- Favicons -->
+  <link rel="icon" type="image/png" sizes="32x32" href="image/attendancelogo.png?v=1">
+  <link rel="icon" type="image/png" sizes="16x16" href="image/attendancelogo.png?v=1">
+  <link rel="shortcut icon" href="image/attendancelogo.png?v=1">
 
-  .container {
-    max-width: 400px;
-    background: rgba(255, 255, 255, 0.95);
-    margin: 0 20px 40px 20px;
-    padding: 30px 40px;
-    border-radius: 12px;
-    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
-    position: relative;
-    z-index: 1;
-  }
-  h1 {
-    text-align: center; margin-bottom: 25px; color: #2c3e50;
-  }
-  form { display: flex; flex-direction: column; }
-  label { margin-bottom: 6px; font-weight: 600; font-size: 0.9rem; }
-  input[type="text"], input[type="password"] {
-    padding: 10px; margin-bottom: 18px; border-radius: 6px;
-    border: 1px solid #ccc; font-size: 1rem; transition: border-color 0.3s;
-  }
-  input:focus { border-color: #007bff; outline: none; }
-  button {
-    padding: 12px; background-color: #007bff; border: none;
-    border-radius: 6px; color: white; font-size: 1rem; cursor: pointer;
-    margin-bottom: 15px; transition: background-color 0.3s;
-  }
-  button:hover { background-color: #0056b3; }
-  .links { display: flex; justify-content: space-between; font-size: 0.9rem; }
-  .links a { color: #007bff; text-decoration: none; transition: text-decoration 0.2s; }
-  .links a:hover { text-decoration: underline; }
-  .description { margin-top: 40px; padding-top: 20px; border-top: 1px solid #eee; font-size: 1rem; color: #555; line-height: 1.5; }
-  @media(max-width: 450px) {
-    .container { width: 90%; padding: 20px; }
-  }
-</style>
+  <title>ChronoPay - Login</title>
+
+  <style>
+    * { box-sizing: border-box; }
+    body, html {
+      margin: 0; padding: 0; height: 100%;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: #333; overflow-x: hidden;
+    }
+    body {
+      background: linear-gradient(135deg, #6b73ff 0%, #000dff 100%);
+      position: relative; min-height: 100vh;
+      display: flex; justify-content: center; align-items: flex-start;
+      padding-top: 40px;
+    }
+    body::before, body::after {
+      content: '';
+      position: fixed;
+      border-radius: 50%;
+      opacity: 0.15;
+      filter: blur(100px);
+      z-index: 0;
+    }
+    body::before { width: 300px; height: 300px; background: #ff6b6b; top: 20%; left: 10%; }
+    body::after { width: 400px; height: 400px; background: #ffd93b; bottom: 10%; right: 15%; }
+
+    .container {
+      max-width: 400px;
+      background: rgba(255, 255, 255, 0.95);
+      margin: 0 20px 40px 20px;
+      padding: 30px 40px;
+      border-radius: 12px;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
+      position: relative;
+      z-index: 1;
+    }
+    h1 {
+      text-align: center; margin-bottom: 25px; color: #2c3e50;
+    }
+    form { display: flex; flex-direction: column; }
+    label { margin-bottom: 6px; font-weight: 600; font-size: 0.9rem; }
+    input[type="text"], input[type="password"] {
+      padding: 10px; margin-bottom: 18px; border-radius: 6px;
+      border: 1px solid #ccc; font-size: 1rem; transition: border-color 0.3s;
+    }
+    input:focus { border-color: #007bff; outline: none; }
+    button {
+      padding: 12px; background-color: #007bff; border: none;
+      border-radius: 6px; color: white; font-size: 1rem; cursor: pointer;
+      margin-bottom: 15px; transition: background-color 0.3s;
+    }
+    button:hover { background-color: #0056b3; }
+    .links { display: flex; justify-content: space-between; font-size: 0.9rem; }
+    .links a { color: #007bff; text-decoration: none; transition: text-decoration 0.2s; }
+    .links a:hover { text-decoration: underline; }
+    .description { margin-top: 40px; padding-top: 20px; border-top: 1px solid #eee; font-size: 1rem; color: #555; line-height: 1.5; }
+
+    .message {
+      text-align: center;
+      padding: 12px;
+      border-radius: 6px;
+      margin-bottom: 18px;
+      font-weight: 600;
+      display: none;
+    }
+    .message.success { background-color: #d4edda; color: #155724; }
+    .message.error { background-color: #f8d7da; color: #721c24; }
+
+    @media(max-width: 450px) {
+      .container { width: 90%; padding: 20px; }
+    }
+  </style>
 </head>
 <body>
 <div class="container">
   <h1>Login</h1>
   <form id="loginForm">
+    <div id="messageBox" class="message"></div>
+
     <label for="username">Username</label>
     <input type="text" id="username" name="username" placeholder="Enter your username" required>
 
@@ -116,6 +135,7 @@ const auth = getAuth(app);
 const db = getFirestore(app);
 
 const loginForm = document.getElementById("loginForm");
+const messageBox = document.getElementById("messageBox");
 
 loginForm.addEventListener("submit", async (e) => {
   e.preventDefault();
@@ -129,7 +149,9 @@ loginForm.addEventListener("submit", async (e) => {
     const querySnapshot = await getDocs(q);
 
     if (querySnapshot.empty) {
-      alert("Username not found!");
+      messageBox.textContent = "❌ Username not found!";
+      messageBox.className = "message error";
+      messageBox.style.display = "block";
       return;
     }
 
@@ -138,12 +160,20 @@ loginForm.addEventListener("submit", async (e) => {
 
     // Sign in with email
     await signInWithEmailAndPassword(auth, email, password);
-    alert("Login successful!");
-    window.location.href = "home.html";
+
+    messageBox.textContent = "✅ Login successful! Redirecting...";
+    messageBox.className = "message success";
+    messageBox.style.display = "block";
+
+    setTimeout(() => {
+      window.location.href = "home.html";
+    }, 2000);
 
   } catch(error) {
     console.error(error);
-    alert(error.message);
+    messageBox.textContent = "❌ " + error.message;
+    messageBox.className = "message error";
+    messageBox.style.display = "block";
   }
 });
 </script>
