--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -3,29 +3,65 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Change Password</title>
+
+<!-- Favicons -->
+<link rel="icon" type="image/png" sizes="32x32" href="image/attendancelogo.png?v=1">
+<link rel="icon" type="image/png" sizes="16x16" href="image/attendancelogo.png?v=1">
+<link rel="shortcut icon" href="image/attendancelogo.png?v=1">
+
+<title>ChronoPay - Change Password</title>
 
 <style>
-  body, html { margin:0; padding:0; font-family: 'Segoe UI', sans-serif; background: linear-gradient(135deg, #6b73ff 0%, #000dff 100%); display:flex; justify-content:center; align-items:center; height:100vh;}
-  body::before, body::after { content: ''; position: fixed; border-radius: 50%; opacity: 0.15; filter: blur(100px); z-index: 0; }
+  body, html {
+    margin:0; padding:0; font-family: 'Segoe UI', sans-serif;
+    background: linear-gradient(135deg, #6b73ff 0%, #000dff 100%);
+    display:flex; justify-content:center; align-items:center; height:100vh;
+  }
+  body::before, body::after {
+    content: ''; position: fixed; border-radius: 50%;
+    opacity: 0.15; filter: blur(100px); z-index: 0;
+  }
   body::before { width: 300px; height: 300px; background: #ff6b6b; top: 20%; left: 10%; }
   body::after { width: 400px; height: 400px; background: #ffd93b; bottom: 10%; right: 15%; }
 
-  .container { background: rgba(255,255,255,0.95); padding:30px 40px; border-radius:12px; box-shadow:0 8px 24px rgba(0,0,0,0.15); max-width:400px; width:90%; z-index:1; position:relative; }
+  .container {
+    background: rgba(255,255,255,0.95); padding:30px 40px; border-radius:12px;
+    box-shadow:0 8px 24px rgba(0,0,0,0.15); max-width:400px; width:90%;
+    z-index:1; position:relative;
+  }
   h1 { text-align:center; color:#2c3e50; margin-bottom:20px; }
   label { display:block; margin-top:10px; font-weight:600; }
-  input { width:100%; padding:10px; margin-top:6px; border-radius:6px; border:1px solid #ccc; }
-  button { margin-top:20px; padding:12px; background:#007bff; color:white; border:none; border-radius:6px; cursor:pointer; width:100%; }
+  input {
+    width:100%; padding:10px; margin-top:6px;
+    border-radius:6px; border:1px solid #ccc;
+  }
+  button {
+    margin-top:20px; padding:12px; background:#007bff; color:white;
+    border:none; border-radius:6px; cursor:pointer; width:100%;
+  }
   button:hover { background:#0056b3; }
   .links { text-align:center; margin-top:15px; font-size:0.9rem; }
   .links a { color:#007bff; text-decoration:none; }
   .links a:hover { text-decoration:underline; }
+
+  .message {
+    text-align: center;
+    padding: 12px;
+    border-radius: 6px;
+    margin-bottom: 18px;
+    font-weight: 600;
+    display: none;
+  }
+  .message.success { background-color: #d4edda; color: #155724; }
+  .message.error { background-color: #f8d7da; color: #721c24; }
 </style>
 </head>
 <body>
 <div class="container">
   <h1>Change Password</h1>
   <form id="changePasswordForm">
+    <div id="messageBox" class="message"></div>
+
     <label for="email">Email</label>
     <input type="email" id="email" placeholder="Enter your email" required>
 
@@ -62,6 +98,7 @@ const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 
 const form = document.getElementById('changePasswordForm');
+const messageBox = document.getElementById('messageBox');
 
 form.addEventListener('submit', async (e) => {
   e.preventDefault();
@@ -71,19 +108,23 @@ form.addEventListener('submit', async (e) => {
   const newPassword = document.getElementById('newPassword').value;
 
   try {
-    // Sign in user first
+    // Re-authenticate user
     const userCredential = await signInWithEmailAndPassword(auth, email, currentPassword);
     const user = userCredential.user;
 
     // Update password
     await updatePassword(user, newPassword);
 
-    alert("Password updated successfully!");
+    messageBox.textContent = "✅ Password updated successfully!";
+    messageBox.className = "message success";
+    messageBox.style.display = "block";
     form.reset();
 
   } catch (error) {
     console.error(error);
-    alert(error.message);
+    messageBox.textContent = "❌ " + (error.code === "auth/wrong-password" ? "Invalid credentials, please try again." : error.message);
+    messageBox.className = "message error";
+    messageBox.style.display = "block";
   }
 });
 </script>
