--- a/home.html
+++ b/home.html
@@ -162,7 +162,7 @@
 </nav>
 
 <main class="content" id="contentArea">
-  <h1>Welcome to the Attendance Dashboard</h1>
+  <h1 id="welcomeMessage">Welcome to the Attendance Dashboard</h1>
   <p>This is your dashboard where you can track attendance, manage payroll, and stay updated with notifications.</p>
 </main>
 
@@ -184,12 +184,14 @@ const firebaseConfig = {
 
 firebase.initializeApp(firebaseConfig);
 const auth = firebase.auth();
+const db = firebase.firestore();
 
 const hamburger = document.getElementById('hamburger');
 const sidebar = document.getElementById('sidebar');
 const contentArea = document.getElementById('contentArea');
 const logoutBtn = document.getElementById('logoutBtn');
 const navLinks = sidebar.querySelectorAll('a[data-page]');
+const welcomeMessage = document.getElementById('welcomeMessage');
 
 // Toggle sidebar
 function toggleMenu() {
@@ -203,7 +205,7 @@ hamburger.addEventListener('click', toggleMenu);
 
 // Page contents
 const pageContents = {
-  home: { title: 'Welcome to the Attendance Dashboard', content: 'This is your dashboard where you can track attendance, manage payroll, and stay updated with notifications.' },
+  home: { title: '', content: 'This is your dashboard where you can track attendance, manage payroll, and stay updated with notifications.' },
   profile: { title: 'Profile', content: 'Manage your profile information and preferences here.' },
   payroll: { title: 'Payroll', content: 'View and manage your payroll information securely.' },
   friendlist: { title: 'Friendlist', content: 'See and manage your friends and colleagues.' },
@@ -218,7 +220,11 @@ navLinks.forEach(link => {
     const page = link.getAttribute('data-page');
     navLinks.forEach(l => l.classList.remove('active'));
     link.classList.add('active');
-    if (pageContents[page]) {
+    if (page === "home") {
+      // Keep custom welcome message
+      contentArea.innerHTML = `<h1 id="welcomeMessage">${welcomeMessage.textContent}</h1>
+        <p>${pageContents.home.content}</p>`;
+    } else if (pageContents[page]) {
       contentArea.innerHTML = `<h1>${pageContents[page].title}</h1><p>${pageContents[page].content}</p>`;
     }
     if(window.innerWidth <= 720) {
@@ -238,9 +244,21 @@ logoutBtn.addEventListener('click', () => {
 });
 
 // Auth check: redirect if not logged in
-auth.onAuthStateChanged(user => {
+auth.onAuthStateChanged(async user => {
   if (!user) {
     window.location.href = "index.html";
+  } else {
+    try {
+      const doc = await db.collection("users").doc(user.uid).get();
+      if (doc.exists) {
+        const username = doc.data().username || "User";
+        welcomeMessage.textContent = `Welcome greetings for ${username}`;
+      } else {
+        welcomeMessage.textContent = "Welcome greetings!";
+      }
+    } catch (err) {
+      console.error("Error fetching user:", err);
+    }
   }
 });
 </script>
