--- a/home.html
+++ b/home.html
@@ -151,13 +151,13 @@
 </header>
 
 <nav class="sidebar" id="sidebar">
-  <a href="home.html" data-page="home">HOME</a>
-  <a href="profile.html" data-page="profile">PROFILE</a>
-  <a href="payroll.html" data-page="payroll">PAYROLL</a>
-  <a href="friendlist.html" data-page="friendlist">FRIENDLIST</a>
-  <a href="mailbox.html" data-page="mailbox">MAILBOX</a>
-  <a href="notification.html" data-page="notification">NOTIFICATION</a>
-  <a href="department.html" data-page="department">DEPARTMENT</a>
+  <a href="home.html">HOME</a>
+  <a href="profile.html">PROFILE</a>
+  <a href="payroll.html">PAYROLL</a>
+  <a href="friendlist.html">FRIENDLIST</a>
+  <a href="mailbox.html">MAILBOX</a>
+  <a href="notification.html">NOTIFICATION</a>
+  <a href="department.html">DEPARTMENT</a>
   <button class="logout-btn" id="logoutBtn">LOG OUT</button>
 </nav>
 
