--- a/profile.html
+++ b/profile.html
@@ -203,7 +203,7 @@
 <!-- Sidebar -->
 <nav class="sidebar" id="sidebar">
   <a href="home.html">HOME</a>
-  <a href="profile.html" class="active">PROFILE</a>
+  <a href="profile.html">PROFILE</a>
   <a href="payroll.html">PAYROLL</a>
   <a href="friendlist.html">FRIENDLIST</a>
   <a href="mailbox.html">MAILBOX</a>
