--- a/profile.html
+++ b/profile.html
@@ -3,14 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="icon" type="image/png" sizes="32x32" href="image/attendancelogo.png?v=1">
+  <link rel="icon" type="image/png" sizes="16x16" href="image/attendancelogo.png?v=1">
+  <link rel="shortcut icon" href="image/attendancelogo.png?v=1">
   <title>ChronoPay - Profile</title>
-  <link rel="icon" type="image/png" href="image/attendancelogo.png?v=1">
 
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #6b73ff, #000dff);
+      background: linear-gradient(135deg, #6b73ff 0%, #000dff 100%);
       min-height: 100vh;
       overflow-x: hidden;
     }
@@ -34,6 +37,7 @@
       font-size: 1.5rem;
       font-weight: 700;
       color: #fff;
+      user-select: none;
     }
 
     /* Hamburger */
@@ -63,9 +67,9 @@
       left: -270px;
       width: 270px;
       height: calc(100vh - 60px);
-      background: rgba(0,0,0,0.85);
+      background: rgba(0, 0, 0, 0.85);
       box-shadow: 2px 0 12px rgba(0,0,0,0.7);
-      padding: 30px 20px 20px;
+      padding: 30px 20px;
       display: flex;
       flex-direction: column;
       gap: 20px;
@@ -79,7 +83,7 @@
       text-decoration: none;
       color: #ddd;
       font-weight: 600;
-      font-size: 1.1rem;
+      font-size: 1.15rem;
       padding: 14px 20px;
       border-radius: 10px;
       transition: background-color 0.3s, color 0.3s;
@@ -105,90 +109,74 @@
     .container {
       background: #fff;
       border-radius: 12px;
-      max-width: 850px;
-      margin: 90px auto 30px;
+      max-width: 700px;
+      margin: 100px auto 30px auto;
       padding: 30px;
       box-shadow: 0 8px 24px rgba(0,0,0,0.15);
       transition: margin-left 0.3s ease;
     }
     .container.shifted { margin-left: 270px; }
 
-    /* Profile header */
     .profile-header {
       display: flex;
       align-items: center;
       gap: 20px;
-      margin-bottom: 20px;
+      margin-bottom: 25px;
     }
-    .profile-pic {
-      width: 120px; height: 120px;
+    .profile-header img {
+      width: 120px;
+      height: 120px;
       border-radius: 50%;
       border: 4px solid #000dff;
       object-fit: cover;
       cursor: pointer;
     }
     .profile-info h2 { margin: 0; font-size: 1.6rem; color: #333; }
-    .profile-info p { margin: 4px 0; color: #555; }
+    .profile-info p { margin: 5px 0; color: #666; }
     .role-tag {
       display: inline-block;
       padding: 4px 10px;
       background: #000dff;
       color: #fff;
       border-radius: 6px;
-      font-size: 0.9rem;
-      margin-top: 6px;
+      font-size: 0.85rem;
+      margin-top: 4px;
     }
 
-    /* Details */
-    .profile-details { margin-top: 15px; }
     .profile-details p { margin: 8px 0; }
     .profile-details strong { color: #000dff; }
 
-    /* Bio */
-    .bio { margin-top: 20px; }
-    .bio textarea {
-      width: 100%; min-height: 80px;
-      resize: none; padding: 10px;
-      border-radius: 8px; border: 1px solid #ccc;
-      font-size: 1rem;
-    }
-
-    /* Stats */
-    .stats {
-      display: flex; gap: 20px;
-      margin: 25px 0;
-    }
-    .stat-card {
-      flex: 1;
-      background: #f0f2ff;
-      padding: 15px;
-      border-radius: 8px;
-      text-align: center;
-    }
-    .stat-card h3 { margin: 0; color: #000dff; }
-    .stat-card p { margin: 5px 0 0; color: #444; }
-
-    /* Other sections */
-    .settings, .social-links, .badges, .privacy, .theme-picker {
+    .bio-section, .edit-section {
       margin-top: 20px;
     }
-    .settings button {
-      display: block; margin: 8px 0; padding: 8px 15px;
-      border: none; border-radius: 6px;
-      background: #000dff; color: #fff; cursor: pointer;
-    }
-    .settings button:hover { background: #4b5eff; }
-    .social-links a { margin-right: 15px; font-size: 1.2rem; color: #000dff; text-decoration: none; }
-    .badges span {
-      display: inline-block;
-      padding: 6px 10px;
-      margin: 4px;
+    textarea, input, select {
+      width: 100%;
+      padding: 8px;
+      margin: 6px 0;
+      border: 1px solid #ccc;
       border-radius: 6px;
-      background: #eee;
-      font-size: 0.9rem;
-      color: #333;
+      font-size: 1rem;
     }
-    .privacy label { display: flex; align-items: center; margin: 6px 0; gap: 10px; }
+    .btn {
+      padding: 10px 16px;
+      border: none;
+      border-radius: 6px;
+      font-weight: bold;
+      cursor: pointer;
+      margin-top: 10px;
+    }
+    .btn.save { background: #000dff; color: #fff; }
+    .btn.save:hover { background: #4b5eff; }
+    .btn.edit { background: #28a745; color: #fff; }
+    .btn.edit:hover { background: #34c759; }
+    .btn.cancel { background: #dc3545; color: #fff; }
+    .btn.cancel:hover { background: #e55363; }
+
+    @media (max-width: 720px) {
+      .container.shifted { margin-left: 0; }
+      nav.sidebar { width: 220px; }
+      .profile-header { flex-direction: column; text-align: center; }
+    }
   </style>
 </head>
 <body>
@@ -200,10 +188,9 @@
   <div class="site-title">Profile</div>
 </header>
 
-<!-- Sidebar -->
 <nav class="sidebar" id="sidebar">
   <a href="home.html">HOME</a>
-  <a href="profile.html">PROFILE</a>
+  <a href="profile.html" class="active">PROFILE</a>
   <a href="payroll.html">PAYROLL</a>
   <a href="friendlist.html">FRIENDLIST</a>
   <a href="mailbox.html">MAILBOX</a>
@@ -212,157 +199,178 @@
   <button class="logout-btn" id="logoutBtn">LOG OUT</button>
 </nav>
 
-<!-- Profile Content -->
 <div class="container" id="contentArea">
-  <!-- Profile Header -->
   <div class="profile-header">
-    <img src="ATTENDANCE/image/defaultprofile.png" alt="Profile Picture" class="profile-pic" id="profilePic">
+    <img id="profilePic" src="ATTENDANCE/image/defaultprofile.png" alt="Profile Picture">
+    <input type="file" id="fileInput" accept="image/*" style="display:none">
     <div class="profile-info">
       <h2 id="fullName">Full Name</h2>
       <p id="username">@username</p>
-      <span class="role-tag" id="roleTag">Employee</span>
+      <span class="role-tag" id="role">Member</span>
     </div>
   </div>
 
-  <!-- Details -->
-  <div class="profile-details">
-    <p><strong>Email:</strong> <span id="email">example@email.com</span></p>
-    <p><strong>Gender:</strong> <span id="gender">N/A</span></p>
-    <p><strong>Phone:</strong> <span id="phone">N/A</span></p>
-    <p><strong>Birthdate:</strong> <span id="birthdate">N/A</span></p>
+  <div class="profile-details" id="profileDetails">
+    <p><strong>Email:</strong> <span id="email">-</span></p>
+    <p><strong>Gender:</strong> <span id="gender">-</span></p>
+    <p><strong>Phone:</strong> <span id="phone">-</span></p>
+    <p><strong>Birthdate:</strong> <span id="birthdate">-</span></p>
   </div>
 
-  <!-- Bio -->
-  <div class="bio">
-    <h3>Personal Bio</h3>
+  <!-- Edit form (hidden by default) -->
+  <div class="edit-section" id="editSection" style="display:none;">
+    <input type="text" id="editFullName" placeholder="Full Name">
+    <select id="editGender">
+      <option value="">Select Gender</option>
+      <option value="Male">Male</option>
+      <option value="Female">Female</option>
+      <option value="Other">Other</option>
+    </select>
+    <input type="text" id="editPhone" placeholder="Phone">
+    <input type="date" id="editBirthdate">
+    <button class="btn save" id="saveProfileBtn">Save Changes</button>
+    <button class="btn cancel" id="cancelEditBtn">Cancel</button>
+  </div>
+
+  <div class="bio-section">
+    <label><strong>Bio:</strong></label>
     <textarea id="bio" maxlength="101" placeholder="Write something about yourself..."></textarea>
+    <button class="btn save" id="saveBioBtn">Save Bio</button>
   </div>
 
-  <!-- Stats -->
-  <div class="stats">
-    <div class="stat-card"><h3 id="friendsCount">0</h3><p>Friends</p></div>
-    <div class="stat-card"><h3 id="messagesCount">0</h3><p>Messages</p></div>
-    <div class="stat-card"><h3 id="notifCount">0</h3><p>Notifications</p></div>
-  </div>
-
-  <!-- Settings -->
-  <div class="settings">
-    <h3>Settings</h3>
-    <button id="changePasswordBtn">Change Password</button>
-    <button id="changeEmailBtn">Change Email</button>
-    <button id="toggle2FABtn">Toggle 2FA</button>
-  </div>
-
-  <!-- Social Links -->
-  <div class="social-links">
-    <h3>Social Links</h3>
-    <a href="#">🌐</a>
-    <a href="#">🐦</a>
-    <a href="#">💼</a>
-  </div>
-
-  <!-- Badges -->
-  <div class="badges">
-    <h3>Achievements</h3>
-    <span>🎖 Starter</span>
-    <span>🏆 Top Employee</span>
-    <span>⭐ Reliable</span>
-  </div>
-
-  <!-- Privacy -->
-  <div class="privacy">
-    <h3>Privacy Options</h3>
-    <label><input type="checkbox" id="showEmail"> Show Email</label>
-    <label><input type="checkbox" id="showPhone"> Show Phone</label>
-  </div>
+  <button class="btn edit" id="editProfileBtn">Edit Profile</button>
 </div>
 
-<!-- Firebase SDKs -->
-<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
+<!-- Firebase -->
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-storage.js"></script>
 
 <script>
   const firebaseConfig = {
-    apiKey: "AIzaSyCchBXnuc11KzkpG720IPtWb7Y1MKO0OTU",
-    authDomain: "chronopay-b4267.firebaseapp.com",
-    projectId: "chronopay-b4267",
-    storageBucket: "chronopay-b4267.appspot.com",
-    messagingSenderId: "335594235253",
-    appId: "1:335594235253:web:48c2581cfaabb143731f3c"
+    apiKey: "YOUR_API_KEY",
+    authDomain: "YOUR_PROJECT.firebaseapp.com",
+    projectId: "YOUR_PROJECT",
+    storageBucket: "YOUR_PROJECT.appspot.com",
+    messagingSenderId: "SENDER_ID",
+    appId: "APP_ID"
   };
-  firebase.initializeApp(firebaseConfig);
+
+  const app = firebase.initializeApp(firebaseConfig);
   const auth = firebase.auth();
   const db = firebase.firestore();
   const storage = firebase.storage();
 
-  // Hamburger toggle
-  const hamburger = document.getElementById('hamburger');
-  const sidebar = document.getElementById('sidebar');
-  const contentArea = document.getElementById('contentArea');
-  hamburger.addEventListener('click', () => {
-    hamburger.classList.toggle('active');
-    sidebar.classList.toggle('open');
-    if (window.innerWidth > 720) contentArea.classList.toggle('shifted');
-  });
-
-  // Logout
-  document.getElementById('logoutBtn').addEventListener('click', () => {
-    if (confirm('Are you sure you want to logout?')) {
-      auth.signOut().then(() => window.location.href = "index.html");
-    }
-  });
-
-  // Profile upload
   const profilePic = document.getElementById('profilePic');
-  const fileInput = document.createElement('input');
-  fileInput.type = 'file'; fileInput.accept = 'image/*'; fileInput.style.display = 'none';
-  document.body.appendChild(fileInput);
+  const fileInput = document.getElementById('fileInput');
+  const bioField = document.getElementById('bio');
+  const saveBioBtn = document.getElementById('saveBioBtn');
 
+  const editProfileBtn = document.getElementById('editProfileBtn');
+  const editSection = document.getElementById('editSection');
+  const profileDetails = document.getElementById('profileDetails');
+  const saveProfileBtn = document.getElementById('saveProfileBtn');
+  const cancelEditBtn = document.getElementById('cancelEditBtn');
+
+  let currentUserId = null;
+
+  // Profile picture upload
   profilePic.addEventListener('click', () => fileInput.click());
-  fileInput.addEventListener('change', e => {
+  fileInput.addEventListener('change', async (e) => {
     const file = e.target.files[0];
-    if (file) {
-      const user = auth.currentUser;
-      if (user) {
-        const storageRef = storage.ref('profiles/' + user.uid + '/profile.jpg');
-        storageRef.put(file).then(() => storageRef.getDownloadURL()).then(url => {
-          profilePic.src = url;
-          db.collection("users").doc(user.uid).update({ photoURL: url });
-        });
-      }
-    }
+    if (!file || !currentUserId) return;
+    const storageRef = storage.ref(`profilePictures/${currentUserId}`);
+    await storageRef.put(file);
+    const url = await storageRef.getDownloadURL();
+    await db.collection("users").doc(currentUserId).update({ photoURL: url });
+    profilePic.src = url;
   });
 
-  // Load profile data
-  auth.onAuthStateChanged(async user => {
+  // Load user profile
+  auth.onAuthStateChanged(async (user) => {
     if (user) {
+      currentUserId = user.uid;
       const doc = await db.collection("users").doc(user.uid).get();
       if (doc.exists) {
-        const data = doc.data();
-        document.getElementById('fullName').textContent = data.fullName || "Full Name";
-        document.getElementById('username').textContent = '@' + (data.username || "username");
-        document.getElementById('roleTag').textContent = data.role || "Employee";
-        document.getElementById('email').textContent = user.email;
-        document.getElementById('gender').textContent = data.gender || "N/A";
-        document.getElementById('phone').textContent = data.phone || "N/A";
-        document.getElementById('birthdate').textContent = data.birthdate || "N/A";
-        document.getElementById('bio').value = data.bio || "";
-        profilePic.src = data.photoURL || "ATTENDANCE/image/defaultprofile.png";
+        const d = doc.data();
+        document.getElementById("fullName").textContent = d.fullName || "No name";
+        document.getElementById("username").textContent = d.username ? "@" + d.username : "@unknown";
+        document.getElementById("role").textContent = d.role || "Member";
+        document.getElementById("email").textContent = d.email || user.email;
+        document.getElementById("gender").textContent = d.gender || "-";
+        document.getElementById("phone").textContent = d.phone || "-";
+        document.getElementById("birthdate").textContent = d.birthdate || "-";
+        bioField.value = d.bio || "";
+
+        if (d.photoURL) profilePic.src = d.photoURL;
       }
     } else {
       window.location.href = "index.html";
     }
   });
 
-  // Save bio live
-  document.getElementById('bio').addEventListener('input', e => {
-    const user = auth.currentUser;
-    if (user) {
-      db.collection("users").doc(user.uid).update({ bio: e.target.value });
+  // Save bio
+  saveBioBtn.addEventListener("click", async () => {
+    if (!currentUserId) return;
+    await db.collection("users").doc(currentUserId).update({ bio: bioField.value.trim() });
+    alert("Bio updated!");
+  });
+
+  // Toggle edit profile
+  editProfileBtn.addEventListener("click", async () => {
+    editSection.style.display = "block";
+    profileDetails.style.display = "none";
+    editProfileBtn.style.display = "none";
+
+    // Pre-fill with current values
+    const doc = await db.collection("users").doc(currentUserId).get();
+    if (doc.exists) {
+      const d = doc.data();
+      document.getElementById("editFullName").value = d.fullName || "";
+      document.getElementById("editGender").value = d.gender || "";
+      document.getElementById("editPhone").value = d.phone || "";
+      document.getElementById("editBirthdate").value = d.birthdate || "";
+    }
+  });
+
+  // Save profile edits
+  saveProfileBtn.addEventListener("click", async () => {
+    if (!currentUserId) return;
+    const updates = {
+      fullName: document.getElementById("editFullName").value.trim(),
+      gender: document.getElementById("editGender").value,
+      phone: document.getElementById("editPhone").value.trim(),
+      birthdate: document.getElementById("editBirthdate").value
+    };
+    await db.collection("users").doc(currentUserId).update(updates);
+    alert("Profile updated!");
+    window.location.reload();
+  });
+
+  // Cancel editing
+  cancelEditBtn.addEventListener("click", () => {
+    editSection.style.display = "none";
+    profileDetails.style.display = "block";
+    editProfileBtn.style.display = "inline-block";
+  });
+
+  // Sidebar + logout
+  const hamburger = document.getElementById('hamburger');
+  const sidebar = document.getElementById('sidebar');
+  const contentArea = document.getElementById('contentArea');
+  const logoutBtn = document.getElementById('logoutBtn');
+  hamburger.addEventListener('click', () => {
+    hamburger.classList.toggle('active');
+    sidebar.classList.toggle('open');
+    if(window.innerWidth > 720) contentArea.classList.toggle('shifted');
+  });
+  logoutBtn.addEventListener('click', () => {
+    if (confirm('Are you sure you want to logout?')) {
+      auth.signOut().then(() => window.location.href = "index.html");
     }
   });
 </script>
+
 </body>
 </html>
